--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Alessandro Soccol
-position: Research fellow & MSc student in Artificial Intelligence
+position: Research Fellow & MSc Student
 affiliation: University of Cagliari
 email: alessandrosoccol@gmail.com
 
