--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,21 +1,42 @@
 main:
 
-  # - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-  #   authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-  #   conference_short: MICCAI
-  #   conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-  #   pdf: https://arxiv.org/pdf/2306.00988.pdf
-  #   code: https://github.com/MrGiovanni/ContinualLearning
-  #   bibtex: https://bib.yliu.me/MICCAI23.txt
-  #   image: ./assets/img/teaser_example_2.png
-  #   notes: Early Accept
-  
+
   - title: KGGLM A Generative Language Model for Generalizable Knowledge Graph Representation Learning in Recommendation
-    authors: Giacomo Balloccu, Ludovico Boratto, Gianni Fenu, Mirko Marras, <strong>Alessandro Soccol</strong>
+    authors: Giacomo Balloccu, Ludovico Boratto, Gianni Fenu, Mirko Marras, and <strong>Alessandro Soccol</strong>
     conference_short: ACM RecSys '24
-    conference: 18th ACM Conference on Recommender Systems <strong>(ACM RecSys '24)</strong>, 2024.
+    conference: 18th ACM Conference on Recommender Systems <strong>(ACM RecSys '24)</strong>, Bari, Italy, 2024.
     pdf: https://dl.acm.org/doi/10.1145/3640457.3691703
     code: https://github.com/mirkomarras/kgglm
     #bibtex: https://bib.yliu.me/MICCAI23.txt
     #image: ./assets/img/teaser_example_2.png
     notes: Late breaking results track (Poster)
+  
+  - title: hopwise A Python Library for Explainable Recommenda- tion based on Path Reasoning over Knowledge Graphs
+    authors: Ludovico Boratto, Gianni Fenu, Mirko Marras, Giacomo Medda, and <strong>Alessandro Soccol</strong>
+    conference_short: ACM CIKM '25
+    conference: 34th ACM Conference on Information and Knowledge Management <strong>(ACM CIKM '25)</strong>, Seoul, South Korea, 2025.
+    pdf: https://dl.acm.org/doi/10.1145/3746252.3761641
+    code: https://github.com/tail-unica/hopwise/tree/main
+    #bibtex: https://bib.yliu.me/MICCAI23.txt
+    #image: ./assets/img/teaser_example_2.png
+    notes: Resource Paper (Poster)
+
+  - title: Effective and Transparent Course Recommendation through Causal Reasoning with Language Models
+    authors: Afreen Neda, Ludovico Boratto, Gianni Fenu, Mirko Marras, and <strong>Alessandro Soccol</strong>
+    conference_short: ACM CIKM '25
+    conference: 15th Italian Information Retrieval Workshop <strong>(IIR '25)</strong>, Cagliari, Italy, 2025.
+    pdf: https://ceur-ws.org/Vol-4026/paper26.pdf
+    #code: https://github.com/tail-unica/hopwise/tree/main
+    #bibtex: https://bib.yliu.me/MICCAI23.txt
+    #image: ./assets/img/teaser_example_2.png
+    notes: Short Paper (Oral)
+
+  - title: Low-Resource Course Recommendation for Professional Training Associations
+    authors: Ludovico Boratto, Gianni Fenu, Marongiu Nicolò, Giacomo Medda, and <strong>Alessandro Soccol</strong>
+    conference_short: ACM CIKM '25
+    conference:  Workshop on Artificial Intelligence with and for Learning Sciences <strong>(WAILS '25)</strong>, Cagliari, Italy, 2025.
+    pdf: https://wailsworkshop.github.io/2025/accepted-papers/
+    #code: https://github.com/tail-unica/hopwise/tree/main
+    #bibtex: https://bib.yliu.me/MICCAI23.txt
+    #image: ./assets/img/teaser_example_2.png
+    notes: Short Paper (Oral)
