--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Alessandro Soccol
-position: Research Fellow & MSc Student
+position: Research Assistant & MSc Student
 affiliation: University of Cagliari
 email: alessandrosoccol@gmail.com
 
@@ -8,7 +8,7 @@ email: alessandrosoccol@gmail.com
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Recommender Systems, Information Retrieval, Deep Learning, Machine Learning, Data Science, Artificial Intelligence, Computer Science, University of Cagliari 
 description: Alessandro Soccol, MSc Student at University of Cagliari. Research interests include Recommender Systems, Information Retrieval, Deep Learning, Machine Learning, Data Science, and Artificial Intelligence.
-canonical: https://minimal-light-theme.yliu.me/
+canonical: https://alessandrosocc.github.io
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
