--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Alessandro Soccol
 position: Research Fellow & MSc Student in Artificial Intelligence
 affiliation: University of Cagliari
-email: alessandro.soccol@unica.com
+email: alessandro.soccol@unica.it
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
