--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: alessandro.soccol@unica.it
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Recommender Systems, Information Retrieval, Deep Learning, Machine Learning, Data Science, Artificial Intelligence, Computer Science, University of Cagliari 
-description: Alessandro Soccol, MSc Student at University of Cagliari. Information Retrieval, Natural Language Processing.
+description: Alessandro Soccol, Research Fellow at University of Cagliari. Information Retrieval, Natural Language Processing.
 canonical: https://alessandrosocc.github.io
 
 # Links 
