--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,5 @@
 main:
 
-
   - title: KGGLM A Generative Language Model for Generalizable Knowledge Graph Representation Learning in Recommendation
     authors: Giacomo Balloccu, Ludovico Boratto, Gianni Fenu, Mirko Marras, and <strong>Alessandro Soccol</strong>
     conference_short: ACM RecSys '24
@@ -40,3 +39,13 @@ main:
     #bibtex: https://bib.yliu.me/MICCAI23.txt
     #image: ./assets/img/teaser_example_2.png
     notes: Short Paper (Oral)
+
+  - title: Explainable Recommendations through Path Reasoning over Knowledge Graph with hopwise
+    authors: Ludovico Boratto, Gianni Fenu, Francesca M. Mallocci, Mirko Marras,   Giacomo Medda, and <strong>Alessandro Soccol</strong>
+    conference_short: ACM UMAP '26
+    conference:  34th ACM International Conference on User Modeling, Adaptation and Personalization <strong>(UMAP '26)</strong>, Gothenburg, Sweden, 2026.
+    #pdf: https://wailsworkshop.github.io/2025/accepted-papers/
+    code: https://tail-unica.github.io/umap2026/
+    #bibtex: https://bib.yliu.me/MICCAI23.txt
+    #image: ./assets/img/teaser_example_2.png
+    notes: Conference Tutorial (90 minutes, Oral)
