--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -40,8 +40,8 @@ main:
     #image: ./assets/img/teaser_example_2.png
     notes: Short Paper (Oral)
 
-  - title: How to Build Explainable Recommender Systems using Path Reasoning on Knowledge Graphs: A Tutorial with hopwise
-    authors: Ludovico Boratto, Gianni Fenu, Francesca M. Mallocci, Mirko Marras,   Giacomo Medda, and <strong>Alessandro Soccol</strong>
+  - title: How to Build Explainable Recommender Systems using Path Reasoning on Knowledge Graphs A Tutorial with hopwise
+    authors: Ludovico Boratto, Gianni Fenu, Francesca M. Mallocci, Mirko Marras, Giacomo Medda, and <strong>Alessandro Soccol</strong>
     conference_short: ACM UMAP '26
     conference:  34th ACM International Conference on User Modeling, Adaptation and Personalization <strong>(UMAP '26)</strong>, Gothenburg, Sweden, 2026.
     #pdf: https://wailsworkshop.github.io/2025/accepted-papers/
